addopts before testpaths

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,7 @@
 [tool:pytest]
-testpaths = testdir1
-addopts =
-    --pyargs string
+addopts = --pyargs
+testpaths = string testdir1
+#testpaths = testdir1 --pyargs string
+#addopts =
+#    --pyargs string
 
